clusters/prod-cluster/organizations/numinia/city-of-mesa/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hyperfy2-numinia-city-of-mesa-rewrite-static-files
  namespace: numinia
spec:
  redirectRegex:
    regex: "^/(.*\\.(css|js|png|jpg|jpeg|gif|svg|woff2?|ttf|eot|ico))$"
    replacement: "/city-of-mesa/$1"
    permanent: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hyperfy2-numinia-city-of-mesa-strip-prefix
  namespace: numinia
spec:
  stripPrefix:
    forceSlash: true
    prefixes:
      - "/city-of-mesa"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hyperfy2-numinia-city-of-mesa-rewrite-root
  namespace: numinia
spec:
  redirectRegex:
    regex: "^/city-of-mesa/?$"
    replacement: "/"
    permanent: false
