clusters/prod-cluster/organizations/numinia/city-of-mesa/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numinia-city-of-mesa-deployment
  namespace: numinia
  labels:
    app: hyperfy2-numinia-city-of-mesa
    environment: prod
    component: game-world
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperfy2-numinia-city-of-mesa
      environment: prod
      component: game-world
  template:
    metadata:
      labels:
        app: hyperfy2-numinia-city-of-mesa
        environment: prod
        component: game-world
    spec:
      serviceAccountName: aws-secret-manager-sa
      imagePullSecrets:
        - name: github/deploy
      nodeSelector:
        NodeType: memory
      tolerations:
        - key: workload
          value: memory
          effect: NoSchedule
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: hyperfy2-numinia-city-of-mesa-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numinia-city-of-mesa-aws-secrets
      containers:
        - name: hyperfy2-numinia-city-of-mesa
          image: ghcr.io/numengames/numinia-hyperfy2:sha-b598263a3eb99e5a8879da871f50c8099d64c39d
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: city-of-mesa
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
